# sisa-assembler

./: Cargo.toml  README.MD
easy_nodes/: Cargo.toml
easy_nodes/src/: lib.rs
src/: main.rs
src/lib/: assembler.rs  flags.rs  lexer.rs  lib.rs  nodes.rs  parser.rs  span.rs  symbol_table.rs  tokens.rs
src/lib/assembler/: message.rs  mod.rs
src/lib/visitors/: machine_code_generator.rs  mod.rs  symbol_table_builder.rs
tests/: assemble.rs  test.S
