[package]
name = "sisa-assembler"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib/lib.rs"

[[bin]]
name = "sas"
path = "src/main.rs"

[dependencies]
plex = "0.2"
colorful = "0.2"
easy_nodes = { path = "easy_nodes" }

[workspace]